[tool.poetry]
name = "story_beam_search"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.10.13"
torch = "2.4.0"
gradio = "5.9.1"
protobuf = "^5.29.2"
scikit-learn = "^1.6.0"
huggingface-hub = "^0.27.0"
pydantic = "^2.10.4"
accelerate = "^1.2.1"
transformers = "4.48.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"


[tool.poetry.group.dev.dependencies]
gradio-client = "^1.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
